fix responsive on iphone

--- a/external.css
+++ b/external.css
@@ -60,7 +60,7 @@
 .lowest {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
     align-content: space-between;
     /* margin: 0 0 0 0; */
 }
